--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ a:hover
 	font-family: sans-serif;
 	font-size: medium;
 	color: #4f83e5;
+	font-weight: 600;
 }
 
 .wmwrtctr_peer_link_url
@@ -68,6 +69,69 @@ a:hover
 	cursor: pointer;
 	background-color: #232500;
 	border-radius: 5px;
+}
+
+.wmwrtctr_pause_line
+{
+	text-align: center;
+	background-color: #2f1900;
+	border-radius: 5px;
+	padding: 5px 0px;
+}
+
+.wmwrtctr_pause_button
+{
+	background-color: #c37e00;
+	border: 0px;
+	border-radius: 17px;
+	cursor: pointer;
+	padding: 10px 20px;
+	color: black;
+	font-size: medium;
+	font-weight: 500;
+	width: 7em;
+}
+
+.wmwrtctr_resume_line
+{
+	text-align: center;
+	background-color: #002f07;
+	border-radius: 5px;
+	padding: 5px 0px;
+}
+
+.wmwrtctr_resume_button
+{
+	background-color: #009525;
+	border: 0px;
+	border-radius: 17px;
+	cursor: pointer;
+	padding: 10px 20px;
+	color: black;
+	font-size: medium;
+	font-weight: 500;
+	width: 7em;
+}
+
+.wmwrtctr_all_engines_stopped
+{
+	text-align: center;
+	padding: 10px 2px;
+	background-color: #00211d;
+	border-radius: 5px;
+}
+
+.wmwrtctr_one_engine_stopped
+{
+	text-align: center;
+	border: 1px solid #004740;
+	padding: 7px 2px;
+	width: 17em;
+	margin: 10px auto;
+	font-family: monospace;
+	font-size: x-large;
+	border-radius: 5px;
+	color: #009688;
 }
 
 .wmwrtctr_center_display
